fix overflow scroll issue

--- a/app/src/components/Chat/chat.css
+++ b/app/src/components/Chat/chat.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-height: calc(100vh - 3rem - 1px); /* height of footer and border*/
 }
 
 .send {
@@ -92,6 +93,10 @@
 
 .exit {
   display: none;
+}
+
+.text {
+  word-break: break-all;
 }
 
 .members {
